// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccomodationCard /> render matches snapshots (Available to hold) 1`] = `
<div
  data-role="accomodation-cards"
>
  <p
    className="canHold"
  >
    Available to hold
  </p>
  <img
    data-role="ac-image"
    src="test-url"
  />
  <h1
    className="title"
    data-role="ac-title"
  >
    Test Subject
  </h1>
  <div
    className="innerWrapper"
  >
    <div
      className="info"
    >
      <ul
        className="occupancy"
      >
        <li
          data-role="ac-size"
        >
          Room size: 100 Square Meters
        </li>
        <li
          data-role="ac-standard-occupancy"
        >
          Standard occupancy - 2
        </li>
        <li
          data-role="ac-max-occupancy"
        >
          Max occupancy - 5
        </li>
      </ul>
      <ul
        className="minMax"
      >
        <li
          data-role="ac-min-max-item"
          key="default"
        >
          Adults
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Infant"
        >
          Infants
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Young Child"
        >
          Young Children
           - 
          Max
           
          3
          Min
           
          1
        </li>
      </ul>
      <ul
        className="actions"
      >
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Brochure"
          >
            + 
            Beach House Brochure
          </Styled(Component)>
        </li>
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Floor Plan"
          >
            + 
            Beach House Floor Plan
          </Styled(Component)>
        </li>
        <li>
          <Styled(Component)
            data-role="ac-more"
            onClick={[Function]}
            title="More information"
          >
            + 
            More information
          </Styled(Component)>
        </li>
      </ul>
    </div>
    <ul
      className="pricing"
    >
      <li>
        <label>
          Lodging Count:
           
          0
        </label>
        <br />
        <styled.button
          className="addLodgingButton"
          onClick={[Function]}
        >
          Add Lodging
        </styled.button>
      </li>
      <li>
        Total net cost
      </li>
      <li
        className="price"
      >
        £12,345.00
      </li>
      <li
        className="priceBeforeDiscount"
      >
        £23,456.00
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 1"
      >
        Test Offer 1
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 2"
      >
        Test Offer 2
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AccomodationCard /> render matches snapshots (Update in progress) 1`] = `
<div
  data-role="accomodation-cards"
>
  <img
    data-role="ac-image"
    src="test-url"
  />
  <h1
    className="title"
    data-role="ac-title"
  >
    Test Subject
  </h1>
  <div
    className="innerWrapper"
  >
    <div
      className="info"
    >
      <ul
        className="occupancy"
      >
        <li
          data-role="ac-size"
        >
          Room size: 100 Square Meters
        </li>
        <li
          data-role="ac-standard-occupancy"
        >
          Standard occupancy - 2
        </li>
        <li
          data-role="ac-max-occupancy"
        >
          Max occupancy - 5
        </li>
      </ul>
      <ul
        className="minMax"
      >
        <li
          data-role="ac-min-max-item"
          key="default"
        >
          Adults
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Infant"
        >
          Infants
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Young Child"
        >
          Young Children
           - 
          Max
           
          3
          Min
           
          1
        </li>
      </ul>
      <ul
        className="actions"
      >
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Brochure"
          >
            + 
            Beach House Brochure
          </Styled(Component)>
        </li>
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Floor Plan"
          >
            + 
            Beach House Floor Plan
          </Styled(Component)>
        </li>
        <li>
          <Styled(Component)
            data-role="ac-more"
            onClick={[Function]}
            title="More information"
          >
            + 
            More information
          </Styled(Component)>
        </li>
      </ul>
    </div>
    <ul
      className="pricing"
    >
      <li>
        <label>
          Lodging Count:
           
          0
        </label>
        <br />
        <styled.button
          className="addLodgingButton"
          onClick={[Function]}
        >
          Add Lodging
        </styled.button>
      </li>
      <li>
        Total net cost
      </li>
      <li
        className="price"
      >
        £12,345.00
      </li>
      <li
        className="priceBeforeDiscount"
      >
        £23,456.00
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 1"
      >
        Test Offer 1
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 2"
      >
        Test Offer 2
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AccomodationCard /> render matches snapshots (default props) 1`] = `
<div
  data-role="accomodation-cards"
>
  <img
    data-role="ac-image"
    src="test-url"
  />
  <h1
    className="title"
    data-role="ac-title"
  >
    Test Subject
  </h1>
  <div
    className="innerWrapper"
  >
    <div
      className="info"
    >
      <ul
        className="occupancy"
      >
        <li
          data-role="ac-size"
        >
          Room size: 100 Square Meters
        </li>
        <li
          data-role="ac-standard-occupancy"
        >
          Standard occupancy - 2
        </li>
        <li
          data-role="ac-max-occupancy"
        >
          Max occupancy - 5
        </li>
      </ul>
      <ul
        className="minMax"
      >
        <li
          data-role="ac-min-max-item"
          key="default"
        >
          Adults
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Infant"
        >
          Infants
           - 
          Max
           
          3
          Min
           
          1
        </li>
        <li
          data-role="ac-min-max-item"
          key="Young Child"
        >
          Young Children
           - 
          Max
           
          3
          Min
           
          1
        </li>
      </ul>
      <ul
        className="actions"
      >
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Brochure"
          >
            + 
            Beach House Brochure
          </Styled(Component)>
        </li>
        <li
          data-role="ac-brochure"
          key="3b4add73-a827-4861-9064-ae3153d881df"
        >
          <Styled(Component)
            onClick={[Function]}
            title="Beach House Floor Plan"
          >
            + 
            Beach House Floor Plan
          </Styled(Component)>
        </li>
        <li>
          <Styled(Component)
            data-role="ac-more"
            onClick={[Function]}
            title="More information"
          >
            + 
            More information
          </Styled(Component)>
        </li>
      </ul>
    </div>
    <ul
      className="pricing"
    >
      <li>
        <label>
          Lodging Count:
           
          0
        </label>
        <br />
        <styled.button
          className="addLodgingButton"
          onClick={[Function]}
        >
          Add Lodging
        </styled.button>
      </li>
      <li>
        Total net cost
      </li>
      <li
        className="price"
      >
        £12,345.00
      </li>
      <li
        className="priceBeforeDiscount"
      >
        £23,456.00
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 1"
      >
        Test Offer 1
      </li>
      <li
        data-role="ac-offer"
        key="Test Offer 2"
      >
        Test Offer 2
      </li>
    </ul>
  </div>
</div>
`;
